[gd_scene load_steps=7 format=3 uid="uid://dvums36c8v12g"]

[ext_resource type="Script" path="res://ESCENES/ESCENARIS/batalla_final.gd" id="1_0i470"]
[ext_resource type="Texture2D" uid="uid://kadk77lwfqti" path="res://SPRITES/Fire_Dungeon_8.jpg" id="1_bv7ct"]
[ext_resource type="PackedScene" uid="uid://c6x3ly45gmilx" path="res://ESCENES/personatges/PRINCIPAL/en batalla.tscn" id="2_m4w5n"]
[ext_resource type="AudioStream" uid="uid://cmu1uhnrtwpa0" path="res://SPRITES/PELEA.mp3" id="4_enikn"]
[ext_resource type="PackedScene" uid="uid://65llpju6qp30" path="res://controlsB.tscn" id="5_m2dg5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7x2iu"]
size = Vector2(270, 271)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_0i470")

[node name="FireDungeon1" type="Sprite2D" parent="."]
position = Vector2(968, 582)
scale = Vector2(1.4, 1.4)
texture = ExtResource("1_bv7ct")
region_enabled = true
region_rect = Rect2(0, 0, 1536, 832)

[node name="Node2D" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Node2D"]
position = Vector2(1446, 936)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 1317.0
offset_top = 868.0
offset_right = 1414.0
offset_bottom = 936.0

[node name="Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "ELEGIR"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1449, 949.5)
shape = SubResource("RectangleShape2D_7x2iu")

[node name="CharacterBody2D" parent="." instance=ExtResource("2_m4w5n")]
position = Vector2(489, 843)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_enikn")
volume_db = -6.0
autoplay = true

[node name="CanvasLayer" parent="." instance=ExtResource("5_m2dg5")]

[connection signal="child_exiting_tree" from="Node2D/Marker2D" to="." method="_on_marker_2d_child_exiting_tree"]
[connection signal="pressed" from="Control/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
